# ntr

./: .clang-format  CMakeLists.txt  LICENSE  README.md  ntr-config.cmake.in
.github/workflows/: auto_format_work.yml  build_test_work.yml
cmake/: ntr-config-shared.cmake.in  ntr-config-static.cmake.in
impl/core/: nfactory.inl  nobject.inl  nreference.inl  nregistrar.inl  ntraits.inl  nwrapper.inl
impl/field/: nfunction.inl  nproperty.inl
inc/: config.h  function_traits.h  impl.h  implement.hpp  nbasic.h  nclass.h  nefuren.cpp  nefuren.h  nenum.h  nephren.cpp  nephren.h  nephren.hpp  nfactory.h  nfield.h  nfunction.h  nproperty.h  nregister.cpp  nregister.h  ntr.h  ntype.h  setup.h  setup.hpp  singleton.h  util.h
inc/core/: factory_util.h  ncontainer_ops_factory.hpp  nfactory.h  nfactory.hpp  nfactory.inl  nfield_factory.hpp  nobject.cpp  nobject.h  nobject.hpp  nobject.inl  nreference.h  nreference.hpp  nreference.inl  nregistrar.cpp  nregistrar.h  nregistrar.hpp  nregistrar.inl  ntable.hpp  ntraits.h  ntraits.hpp  ntype_factory.hpp  ntype_ops_factory.hpp  nwrapper.hpp  singleton.h
inc/field/: neitem.cpp  neitem.h  neitem.hpp  neitem.inl  nfield.cpp  nfield.h  nfield.hpp  nfield.inl  nfunction.cpp  nfunction.h  nfunction.hpp  nfunction.inl  nproperty.cpp  nproperty.h  nproperty.hpp  nproperty.inl
inc/impl/core/: ncontainer_ops_factory.inl  nfactory.inl  nfield_factory.inl  nobject.inl  nregistrar.inl  ntable.inl  ntype_factory.inl  ntype_ops_factory.inl  nwrapper.inl
inc/impl/field/: nfunction.inl  nproperty.inl
inc/impl/tool/: narray.inl  nhash_map.inl  nhash_set.inl  nhash_table.inl  ntable.inl  ntraits.inl  nvector.inl
inc/impl/util/: nhash_map.inl  nhash_set.inl  nhash_table.inl  ntemplate_list.inl  ntype_traits.inl  nvector.inl
inc/tool/: narray.hpp  nhash_map.hpp  nhash_set.hpp  nhash_table.hpp  ntable.hpp  ntraits.hpp  nvector.hpp
inc/type/: nbasic.h  nbasic.inl  nclass.cpp  nclass.h  nclass.hpp  nclass.inl  ncontainer.hpp  nenum.cpp  nenum.h  nenum.hpp  nenum.inl  nfactory.h  nfactory.inl  nlist.hpp  nnumeric.cpp  nnumeric.h  nnumeric.hpp  nnumeric.inl  npointer.hpp  nstd_pair.hpp  ntraits.hpp  ntype.cpp  ntype.h  ntype.hpp  ntype.inl
inc/util/: nhash_map.hpp  nhash_set.hpp  nhash_table.hpp  ntemplate_list.hpp  ntype_traits.hpp  nvector.hpp
inl/core/: nfactory.inl  nobject.inl  nreference.inl  nregistrar.inl
inl/field/: nfunction.inl  nproperty.inl
ntr/: nclass.h  nfunction.h  nproperty.h  ntr.h
ntr/detail/: function_traits.h  property_traits.h
src/: ntr.cpp  ntrr.cpp
src/core/: nfactory.cpp  nfield_factory.cpp  nobject.cpp  nregistrar.cpp  ntable.cpp  ntype_factory.cpp  ntype_ops_factory.cpp  nwrapper.cpp
src/field/: neitem.cpp  nfield.cpp  nfunction.cpp  nproperty.cpp
src/tool/: narray.cpp  ntable.cpp  ntraits.cpp
src/type/: nclass.cpp  ncontainer.cpp  nenum.cpp  nnumeric.cpp  npointer.cpp  nstd_pair.cpp  ntype.cpp
src/util/: ntype_traits.cpp
test/: CMakeLists.txt  array_test.cpp  container_test.cpp  ntr.cpp  ntr_test.cpp  ntr_test.hpp  object_test.cpp  reflect_test.cpp  serializer_test.cpp  table_test.cpp  test.cpp
